@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.74
-Date: 2008-11-02
+Date: 2008-11-04
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
